# mauricebrg.com-projects

./: Readme.md
amazon-purchases/: .gitignore  README.md  pyproject.toml
amazon-purchases/src/: analysis.py  entities.py  parser.py  utils.py
cf-bug-analysis/: .gitignore  .terraform.lock.hcl  README.md  cloudfront.tf  hooks.js  load_test.yml  locals.tf  main.tf  outputs.tf  package-lock.json  package.json  s3.tf  sample_500_error.html  summary_no_custom_errors.txt  summary_prod_and_staging.txt  summary_prod_only.txt  summary_prod_only_no_errors.txt  summary_staging_only.txt  summary_sticky_prod_and_staging.txt
cf-bug-analysis/static/: 404.html  index.html
click-getting-started/: .gitignore  Readme.md  calculator_cli_v1.py  calculator_cli_v2.py  cli.py  config.yml  hello_world_cli.py  iheartcli.yml  multi_level_cli.py  package-lock.json  progress_bar.py  prompts.py  text_style.py
click-getting-started/demo/: calcv2.yml  demo_v1.yml  multi-level.yml  progress_iterable.yml  prompt.yml
pandas-hashing/: Readme.md  hasher_measurements.xlsx  pandas_hashing.py
pandas-hashing-v2/: pandas_hashing.py
terminalizer/: Readme.md  clean-demo.yml  demo.yml  hello-world.yml  hello.yml  package-lock.json  package.json  play-hello.yml  render-hello.yml  so-much-cleaner.yml
